--- a/partials/store.html
+++ b/partials/store.html
@@ -15,7 +15,7 @@
 		<table class="table table-bordered table-hover">
 			<thead>
 				<tr class="active">
-					<td colspan="4"> <i class='fa fa-shopping-cart'></i>Total:  <a href='#/cart' class='cart'> <strong>{{vm.cart.totalQuantity}}</strong> item(s), <strong>{{vm.cart.totalQuantity | currency: '$': 2 }}</strong></a></td>
+					<td colspan="4"> <i class='fa fa-shopping-cart'></i>Total:  <a href='#/cart' class='cart'> <strong>{{vm.cart.totalQuantity}}</strong> item(s), <strong>{{vm.cart.totalPrice | currency: '$': 2 }}</strong></a></td>
 				</tr>
 			</thead>
 			<tr ng-repeat='item in vm.store.products | filter: vm.searchKey'>
@@ -33,7 +33,7 @@
 			</tr>
 			<tfoot class="active">
 				<tr class="active">
-					<td colspan="4"> <i class='fa fa-shopping-cart'></i>Total:  <a href='#/cart' class='cart'><strong>{{vm.cart.totalQuantity}}</strong> item(s), <strong>{{vm.cart.totalQuantity | currency: '$': 2 }}</strong></a></td>
+					<td colspan="4"> <i class='fa fa-shopping-cart'></i>Total:  <a href='#/cart' class='cart'><strong>{{vm.cart.totalQuantity}}</strong> item(s), <strong>{{vm.cart.totalPrice | currency: '$': 2 }}</strong></a></td>
 				</tr>
 			</tfoot>
 		</table>
